"nscanned" not logged anymore for queries

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.6.0-rc1
    • Affects Version/s: None
    • Component/s: Logging, Querying
    • None
    • Fully Compatible
    • ALL
    • Hide

      version : "2.5.6-pre-"
      gitVersion : "25c2e4bcb4d25fddf0eb2b214ff9229f26456b89"

      Show
      version : "2.5.6-pre-" gitVersion : "25c2e4bcb4d25fddf0eb2b214ff9229f26456b89"
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Regular collection scans (without index) don't log the "nscanned" value anymore:

      2014-02-19T16:01:08.210+1100 [conn15] query test.mgendata query: { class: "something" } planSummary: COLLSCAN ntoreturn:0 ntoskip:0 keyUpdates:0 numYields:7 locks(micros) r:5110987 nreturned:0 reslen:20 2639ms
      

      The same query with .explain() logs the "nscanned" value.

      2014-02-19T16:01:13.011+1100 [conn15] query test.mgendata query: { query: { class: "something" }, $explain: true } planSummary: COLLSCAN ntoreturn:0 ntoskip:0 nscanned:7100000 keyUpdates:0 numYields:5 locks(micros) r:4789802 nreturned:1 reslen:582 2528ms
      

      The "nscanned" value in the log file is important for performance analysis and should always be logged, like in previous versions.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Thomas Rueckstiess (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: