SERVER-12774 added nscanned to slow query log