src/mongo/db/query/new_find.cpp
@@ -612,10 +612,17 @@ namespace mongo {
                                            shardingState.getVersion(pq.ns()));
         }
 
-        // Get explain information if it is needed by either the profiler
-        // or by an explain() query.
+        // Used to fill in explain and to determine if the query is slow enough to be logged.
+        int elapsedMillis = curop.elapsedMillis();
+
+        // Get explain information if:
+        // 1) it is needed by an explain query;
+        // 2) profiling is enabled; or
+        // 3) query is "slow" and has to be logged.
         boost::scoped_ptr<TypeExplain> explain(NULL);
-        if (isExplain || ctx.ctx().db()->getProfilingLevel() > 0) {
+        if (isExplain ||
+            ctx.ctx().db()->getProfilingLevel() > 0 ||
+            elapsedMillis > serverGlobalParams.slowMS) {
             // Ask the runner to produce explain information.
             TypeExplain* bareExplain;
             Status res = runner->getInfo(&bareExplain, NULL);
@@ -647,7 +654,7 @@ namespace mongo {
             explain->setN(numResults);
 
             // Clock the whole operation.
-            explain->setMillis(curop.elapsedMillis());
+            explain->setMillis(elapsedMillis);
 
             BSONObj explainObj = explain->toBSON();
             bb.appendBuf((void*)explainObj.objdata(), explainObj.objsize());
